Fix layout breaking on specific screen sizes

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -80,6 +80,27 @@ body {
   -webkit-appearance: none;
   margin: 0;
 }
+
+@media only screen and (min-width: 900px) and (max-width: 1100px), (max-width: 350px) {
+  .code-input input {
+    font-size: 3rem;
+    height: 60px;
+    width: 40px;
+    margin-right: 10px;
+    border-radius: 5px;
+  }
+}
+@media only screen and (max-width: 250px) {
+  .code-input input {
+    font-size: 3rem;
+    height: 40px;
+    width: 25px;
+    margin-right: 10px;
+    border-radius: 5px;
+    padding: 5px;
+  }
+}
+
 @keyframes shake {
   10%, 90% {
     transform: translate3d(-2px, 0, 0);
