--- a/src/client/pages/home.css
+++ b/src/client/pages/home.css
@@ -1,4 +1,4 @@
-@media(min-width: 750px) {
+@media(min-width: 900px) {
   .home-sections {
     display: flex;
     width: 100%;
